== 2026-02-14 16:34 == Bugfix: Drop auto-select channels not tracked (v1.2.0-beta.4) ==

Fixed critical bug where game-directory auto-selected channels were never recognized as drop channels.
Root cause: matchCampaignChannels only checks campaign.Channels (allowed list), so channels found via
game directory fallback were invisible to re-match, causing "Tracking N drop(s) across 0 channel(s)".

- Replace re-match with direct loginMap lookup after auto-select (internal/farmer/drops.go)
- Add zombie temp channel cleanup: remove temp channels with no campaign link and no active drop
- Prevents accumulation of orphaned temp channels across cycles

== 2026-02-13 20:48 == Feature: Enhanced Drop Miner (v1.2.0) ==

Major upgrade to the drop mining system with auto-discovery, failover, and campaign management.

Expired Campaign Cleanup:
- Campaigns past their EndAt timestamp are now skipped during processDrops()
- Prevents wasting Spade slots on stale data returned by Twitch's inventory API

Temporary Channel Infrastructure:
- New IsTemporary and CampaignID fields on ChannelState/ChannelSnapshot
- addTemporaryChannel(): adds a channel for drop tracking without saving to config
- removeTemporaryChannel(): cleans up PubSub/IRC/Spade without touching config
- RemoveChannelLive() delegates to temp removal for temporary channels
- AddChannelLive() promotes a temporary channel to permanent if user adds it manually
- Stale temporary channels (campaign ended/disabled) are auto-removed each cycle

Drop Channel Failover:
- handleDropFailover() triggers when a drop channel goes offline or raids to untracked channel
- 5-minute cooldown per campaign to prevent rapid channel cycling
- Failover strategy: try existing online channels → allowed channels → game directory
- EventStreamDown handler triggers failover if channel had active drop
- EventRaid handler triggers failover if source had active drop and target untracked
- Cooldown map cleaned periodically (entries > 30 min removed)
